--- a/Резюме.html
+++ b/Резюме.html
@@ -3,39 +3,50 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="keywords" content="html,css,tags>
+  <meta name="keywords" content="html,css,tags">
   <meta name="description" content="Резюме Ивана Павленко">
   <title>Резюме</title>
+  <link rel="stylesheet" href="CSS resume.css">
 </head>
 <body>
-  <img src="Hello.jpg" width="400" alt="Foto">
+  <div class="container">
+
+  <div class="info">
+  <img src="Hello.jpg" alt="Ivan Pavlenko" class="avatar">
+  <div class="info-text">
   <h1>Иван Павленко</h1>
-  <p>Я начинающий програмист <strong>Frontend контента</strong></p> и в будущем <strong>FullStack разработчик</strong>
-  <br>
-  <p>Люблю :<em> Спорт,прогулки,компьютерные игры,изучать что то новое</em> </p>
+  <p>Я начинающий програмист <strong>Frontend контента</strong> и в будущем <strong>FullStack разработчик.</strong></p>
+  
+  <p><em>Люблю : Спорт,прогулки,компьютерные игры,изучать что то новое.</em> </p>
 <h4>Список социальных сетей:</h4>
   <p>
     <a href="https://vk.com/id741116269" target="_blank">VK</a>| 
     <a href="https://t.me/Ivan_Powers" target="_blank">Telegram</a>|
     <a href="https://www.youtube.com/channel/UCLTPB6-xQvoQQyueCHmBHXg" target="_blank"> Youtube</a></p>
-    <hr size="3" color="grey">
-<h2>Мои Хобби</h2>
-    <ol>
-      <li>Спорт</li>
+    
+  </div>
+  </div>
+  <hr size="3" color="grey">
+  <div class="info-hobby">
+<h2 >Мои Хобби</h2>
+    <ol class="list">
+      <li>Workout</li>
       <li>Туризм</li>
       <li>Компьютерные Игры</li>
       <li>Футбол</li>
     </ol>
+  </div>
     <hr size="3" color="orange">
-    <h2><strong>Опыт работы</strong></h2>
-    <table width="400">
-      <thead>
+    <div class="work">
+    <h2 ><strong>Опыт работы</strong></h2>
+    <table class="table"  width="400" >
+      <!-- <thead>
         <tr></tr>
         <th>Название</th>
         <th>Должность</th>
         <th>Год</th>
       </tr>
-      </thead>
+      </thead> -->
       <tbody>
         <tr>
         <td>Азовинтэкс</td>
@@ -54,30 +65,31 @@
       </tr>
       </tbody>
     </table>
-    <hr size="5" color="blue">
-    <h2>Связаться co мной<h2>
-    <form action="/">
-      <div>
+  </div>
+    <br>
+    <div class="Contacts">
+    <form action="/" class="form">
+      <h2>Связаться co мной<h2>
+        <div class="form-row">
+      <div class="form-group">
       <label for="name"> Ваше имя:</label>
       <input type="text" id="name" placeholder="Введите своё имя">
     </div>
 
-    <div>
+    <div class="form-group">
       <label for="email"> Ваш Email:</label>
       <input type="email" id="email" placeholder="Введите свой Email">
     </div>
-
-    <div>
-      <label for="message" >Ваше сообщение:</label>
-      <br>
-      <textarea  id="message" cols="20" rows="5" placeholder="Введите своё сообщение...">
-
-      </textarea>
+  </div>
+    <div class="form-group">
+      <label for="message">Ваше сообщение:</label>
+      <textarea id="message"cols="15"rows="5"placeholder="Введите своё сообщение..."></textarea>
     </div>
-  <button type="submit">Отправить</button>
+  <button type="submit" class="btn">Отправить!</button>
   
 
     </form>
-
+  </div>
+</div>
 </body>
 </html>
